little overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ main > p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-wrap: anywhere;
 }   
 
 #menu ul li:first-child {
